--- a/index.html
+++ b/index.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <p> Animales bonitos xd </p>
+
+    <h1> Que es la comida ?</h1>
+
+    <p> Los alimentos son unas sustancias (sólidas o líquidas) 
+        que ingerimos y que nuestro organismo transforma obteniendo 
+        unas sustancias químicas, nutrientes, necesarios para la formación,
+         crecimiento y reconstrucción de nuestros tejidos.</p>
+
+
+         <h1> Que tipos de comida hay ? </h1>
+
+          <ol>
+      
+            <li>Verduras.</li>
+            <li>Frutas.</li>
+            <li>lácteos.</li> 
+            <li>Proteínas.</li>
+             </li>
+
+             </ol>
 </body>
 </html>
