--- a/index.html
+++ b/index.html
@@ -27,5 +27,21 @@
              </li>
 
              </ol>
+
+
+
+             <P> QUE SON LOS GRUPOS DE ALIMENTOS ? </P>
+
+             <P><strong> cereales, tubérculos y derivados; frutas, verduras; leche y 
+            derivados; carnes, legumbres secas y huevos; azúcares o mieles; aceites o grasas</strong></P>
+
+
+
+
+            <h1> Frutas y verduras </h1>
+
+            <p><strong > Se considera que las frutas y verduras son las partes comestibles de las plantas
+                 (por ejemplo, estructuras seminíferas, flores, yemas, hojas, tallos, brotes y raíces), tanto
+                  cultivadas como silvestres, en estado crudo o con un procesamiento mínimo.</strong></p>
 </body>
 </html>
