--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paractica 2 </title>
 </head>
+
+<h3> Comida Rapida </h3>
 <body>
     <p> Animales bonitos xd </p>
 </body>
+
+<h3> Especialidades de la casa </h3>
+<p> Comida china, nosotros nos especializamos en el menu de comida china, brindandote opciones autenticas y faciles de hacer en la comodidad de tu casa.</p>
 </html>
