--- a/index.html
+++ b/index.html
@@ -13,4 +13,7 @@
 
 <h3> Especialidades de la casa </h3>
 <p> Comida china, nosotros nos especializamos en el menu de comida china, brindandote opciones autenticas y faciles de hacer en la comodidad de tu casa.</p>
+<h3> Nuestros Chefs</h3>
+<p> Nosotros trabajamos para brindarte opciones variadas, siempre cuidando tu salud fisica </p>
+<h3> Nuestro publico </h3>
 </html>
