--- a/index.html
+++ b/index.html
@@ -43,5 +43,32 @@
             <p><strong > Se considera que las frutas y verduras son las partes comestibles de las plantas
                  (por ejemplo, estructuras seminíferas, flores, yemas, hojas, tallos, brotes y raíces), tanto
                   cultivadas como silvestres, en estado crudo o con un procesamiento mínimo.</strong></p>
+
+              <h1> Para que sirven </h1>
+              <p> <strong> Además, las dietas ricas en frutas y verduras pueden reducir el riesgo de algunos tipos de cáncer y
+                 otras enfermedades crónicas. Las frutas y verduras también proveen vitaminas y minerales esenciales, fibra y 
+                 otras sustancias que son importantes para la buena salud.</strong></p>
+
+
+                 <h1>Beneficios  </h1>
+
+                 <p><strong> Las frutas y verduras son ricas en vitamina A, 
+                    calcio, hierro y ácido fólico, lo que puede promover la buena salud, 
+                    fortalecer el sistema inmunológico del niño y ayudar a protegerlo contra enfermedades, 
+                    tanto ahora como en el futuro (Xin, 2016).
+                </strong></p>
+
+
+                <h1> Importancia </h1>
+
+                <p><strong> Las frutas y verduras son  esenciales para cubrir los requerimientos nutricionales de nuestro organismo debido a su alto contenido en:
+
+                   <li>fibra</li> 
+                    <li>vitaminas</li>
+                    <li>minerales</li>
+                   <li>agua </li> 
+                    y antioxidantes</strong></p>
+
+
 </body>
 </html>
