--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paractica 2 </title>
+   <link rel="" href="Ruth.css">
 </head>
 <body>
     <p> Animales bonitos xd </p>
